updated to 26.2