@@ -1,5 +1,6 @@
 package net.greenjab.nekomasfixed.screen;
 
+import com.mojang.datafixers.util.Pair;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.greenjab.nekomasfixed.NekomasFixed;
@@ -10,8 +11,6 @@ import net.minecraft.client.input.MouseButtonEvent;
 import net.minecraft.client.renderer.RenderPipelines;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.Identifier;
-import net.minecraft.util.ARGB;
-import net.minecraft.util.Tuple;
 import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.inventory.Slot;
@@ -24,7 +23,7 @@ import org.jspecify.annotations.NonNull;
 import java.util.List;
 
 @Environment(EnvType.CLIENT)
-public class PyrotechnicsTableScreen extends AbstractContainerScreen<PyrotechnicsTableScreenHandler> {
+public class PyrotechnicsTableScreen extends AbstractContainerScreen<PyrotechnicsMenu> {
 
     private static final Identifier TEXTURE = NekomasFixed.id("textures/gui/container/pyrotechnics_table.png");
 
@@ -63,20 +62,20 @@ public class PyrotechnicsTableScreen extends AbstractContainerScreen<Pyrotechnic
 
     private static final Identifier CHEST_SLOTS_TEXTURE = Identifier.withDefaultNamespace("container/horse/chest_slots");
 
-    private static final List<Tuple<String, Item>> ANIMATIONS = List.of(
-        new Tuple<>("small_ball", Items.AIR),
-        new Tuple<>("large_ball", Items.FIRE_CHARGE),
-        new Tuple<>("star", Items.GOLD_NUGGET),
-        new Tuple<>("creeper", Items.CREEPER_BANNER_PATTERN),
-        new Tuple<>("burst", Items.FEATHER),
-        new Tuple<>("none", Items.AIR),
-        new Tuple<>("twinkle", Items.GLOWSTONE_DUST),
-        new Tuple<>("trail", Items.DIAMOND)
+    private static final List<Pair<String, Item>> ANIMATIONS = List.of(
+        new Pair<>("small_ball", Items.AIR),
+        new Pair<>("large_ball", Items.FIRE_CHARGE),
+        new Pair<>("star", Items.GOLD_NUGGET),
+        new Pair<>("creeper", Items.CREEPER_BANNER_PATTERN),
+        new Pair<>("burst", Items.FEATHER),
+        new Pair<>("none", Items.AIR),
+        new Pair<>("twinkle", Items.GLOWSTONE_DUST),
+        new Pair<>("trail", Items.DIAMOND)
     );
 
     private final int totalPatterns = 8;
 
-    public PyrotechnicsTableScreen(PyrotechnicsTableScreenHandler handler, Inventory inventory, Component title) {
+    public PyrotechnicsTableScreen(PyrotechnicsMenu handler, Inventory inventory, Component title) {
         super(handler, inventory, title, 176, 186);
     }
 
@@ -93,7 +92,6 @@ public class PyrotechnicsTableScreen extends AbstractContainerScreen<Pyrotechnic
     public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY, float deltaTicks) {
         this.extractContents(context, mouseX, mouseY, deltaTicks);
         this.extractCarriedItem(context, mouseX, mouseY);
-        this.extractSnapbackItem(context);
         this.extractTooltip(context, mouseX, mouseY);
     }
 
@@ -101,12 +99,12 @@ public class PyrotechnicsTableScreen extends AbstractContainerScreen<Pyrotechnic
     public void extractBackground(GuiGraphicsExtractor context, int mouseX, int mouseY, float deltaTicks) {
         context.blit(RenderPipelines.GUI_TEXTURED, TEXTURE, leftPos, topPos, 0.0F, 0.0F, this.imageWidth, this.imageHeight, 256, 256);
 
-        context.blitSprite(RenderPipelines.GUI_TEXTURED, NekomasFixed.id("container/pyrotechnics_table/"+ANIMATIONS.get(this.menu.getSelectedPattern()).getA()), leftPos+98, topPos+15, 71, 71);
+        context.blitSprite(RenderPipelines.GUI_TEXTURED, NekomasFixed.id("container/pyrotechnics_table/"+ANIMATIONS.get(this.menu.getSelectedPattern()).getFirst()), leftPos+98, topPos+15, 71, 71);
         for (Slot slot : this.menu.slots){
             if (slot.isActive() && slot.getContainerSlot()>0 && slot.container instanceof SimpleContainer) {
                 context.blitSprite(RenderPipelines.GUI_TEXTURED, CHEST_SLOTS_TEXTURE, 90, 54, 0, 0, leftPos+slot.x-1, topPos+slot.y-1, 18, 18);
                 if (!slot.hasItem()){
-                    if (slot.mayPlace(Items.WHITE_DYE.getDefaultInstance()))
+                    if (slot.mayPlace(Items.DYE.white().getDefaultInstance()))
                         context.blitSprite(RenderPipelines.GUI_TEXTURED, DYE_ICON, leftPos + slot.x, topPos + slot.y, 16, 16);
                     else if (slot.mayPlace(Items.FIREWORK_STAR.getDefaultInstance()))
                         context.blitSprite(RenderPipelines.GUI_TEXTURED, FIREWORK_STAR_ICON, 16, 16, 0, 0, leftPos + slot.x, topPos + slot.y, 16, 16);
@@ -118,7 +116,7 @@ public class PyrotechnicsTableScreen extends AbstractContainerScreen<Pyrotechnic
             }
         }
         this.dyeOrStarSlotIcon.extractRenderState(this.menu, context, deltaTicks, this.leftPos, this.topPos);
-        if (this.menu.slots.get(0).hasItem() && this.menu.slots.get(0).getItem().getItem() instanceof DyeItem){
+        if (this.menu.slots.getFirst().hasItem() && this.menu.slots.getFirst().getItem().getItem() instanceof DyeItem){
             this.shapeSlotIcon.extractRenderState(this.menu, context, deltaTicks, this.leftPos, this.topPos);
             this.twinkleSlotIcon.extractRenderState(this.menu, context, deltaTicks, this.leftPos, this.topPos);
             this.trailSlotIcon.extractRenderState(this.menu, context, deltaTicks, this.leftPos, this.topPos);
@@ -141,12 +139,12 @@ public class PyrotechnicsTableScreen extends AbstractContainerScreen<Pyrotechnic
                 if (index == this.menu.getSelectedPattern()) identifier2 = BUTTON_SELECTED_TEXTURE;
                 else if (bl) {
                     identifier2 = BUTTON_HIGHLIGHTED_TEXTURE;
-                    context.setTooltipForNextFrame(Component.translatable("container.nekomasfixed.pyrotechnics_table."+ANIMATIONS.get(index).getA()), mouseX, mouseY);
+                    context.setTooltipForNextFrame(Component.translatable("container.nekomasfixed.pyrotechnics_table."+ANIMATIONS.get(index).getFirst()), mouseX, mouseY);
                     context.requestCursor(CursorTypes.POINTING_HAND);
                 } else identifier2 = BUTTON_TEXTURE;
 
                 context.blitSprite(RenderPipelines.GUI_TEXTURED, identifier2, bx, by, 14, 18);
-                context.item(ANIMATIONS.get(index).getB().getDefaultInstance(), bx-1, by+1);
+                context.item(ANIMATIONS.get(index).getSecond().getDefaultInstance(), bx-1, by+1);
             }
         }
     }
